--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -1,7 +1,16 @@
+@use 'variables';
+
 html {
     font-size: 16px;
+    
 }
 
 body {
     margin:0;
+}
+
+button{
+    background-color: white;
+    border: solid variables.$ldlRed 10px;
+    padding: 5px;
 }
