--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@ body {
   margin: 0;
 }
 
+button {
+  background-color: white;
+  border: solid #B20838 10px;
+  padding: 5px;
+}
+
 .disclaimer {
   width: 100%;
   height: 2rem;
@@ -13,4 +19,29 @@ body {
   color: #B20838;
   font-size: 1rem;
   vertical-align: middle;
+}
+
+footer {
+  background-color: #092327;
+  width: 100%;
+  text-align: left;
+  padding: 55px 50px;
+}
+
+footer .footer-left,
+footer .footer-center,
+footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+}
+
+.legal__links {
+  display: flex;
+  align-items: center;
 }/*# sourceMappingURL=styles.css.map */
