--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -1,10 +1,12 @@
 @use 'variables';
 
 .disclaimer{
-    width: 100%;
-    height: 2rem;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    width: 100vw;
+    height: 5vh;
     background: variables.$pink;
     color: variables.$ldlRed;
     font-size: 1rem;
-    vertical-align: middle;
 }
