--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,36 @@ html {
 
 body {
   margin: 0;
+  background-color: black;
+}
+
+button {
+  background-color: white;
+  border: solid #B20838 10px;
+  padding: 5px;
 }
 
 .disclaimer {
-  width: 100%;
-  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 5vh;
   background: #F8DDE5;
   color: #B20838;
   font-size: 1rem;
-  vertical-align: middle;
+}
+
+footer {
+  background-color: #092327;
+  width: 100%;
+  text-align: left;
+  padding: 55px 50px;
+}
+
+footer .footer-left,
+footer .footer-center,
+footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
 }/*# sourceMappingURL=styles.css.map */
