--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -1,7 +1,10 @@
 html {
+    font-family: "Manrope", sans-serif;
     font-size: 16px;
 }
 
 body {
     margin:0;
+    box-sizing: content-box;
+    width: 100vw;
 }
