--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -1,24 +1,28 @@
-footer{
-    background-color: #092327;
-    width: 100%;
-    text-align: left;
-    padding: 55px 50px;
+footer {
+  background-color: #092327;
+  width: 100%;
+  text-align: left;
+  padding: 55px 50px;
 }
 footer .footer-left,
 footer .footer-center,
-footer .footer-right{
-	display: inline-block;
-	vertical-align: top;
+footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
 }
 
 .legal {
-    display: flex;
-    flex-wrap: wrap;
-    color: #999;
-  }
-    
-  .legal__links {
-    display: flex;
-    align-items: center;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+}
+
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+.footer a {
+  text-transform: uppercase;
+  color: white;
+}
