--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -1,13 +1,26 @@
 @use 'variables';
 
+/* le disclaimer est en display grid sur une colonne et une rangée*/
 .disclaimer{
-    display:flex;
-    align-items:center;
-    justify-content:center;
+    display:grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     width: 100vw;
-    height: 5vh;
+    height: 10vh;
     background: variables.$pink;
     color: variables.$ldlRed;
     font-size: 1rem;
-    padding:2px;
+  
+    p{
+        align-self: center;
+        justify-self: center;
+        margin-left: 2vw;
+    }
+    i{
+        margin-bottom: 8vw;
+        margin-right: 2vw;;
+        align-self: center;
+        justify-self: center;
+    }
+
 }
