--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
@@ -15,16 +16,27 @@ button {
   padding: 5px;
 }
 
+/* le disclaimer est en display grid sur une colonne et une rangée*/
 .disclaimer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   width: 100vw;
-  height: 5vh;
+  height: 10vh;
   background: #F8DDE5;
   color: #B20838;
   font-size: 1rem;
-  padding: 2px;
+}
+.disclaimer p {
+  align-self: center;
+  justify-self: center;
+  margin-left: 2vw;
+}
+.disclaimer i {
+  margin-bottom: 8vw;
+  margin-right: 2vw;
+  align-self: center;
+  justify-self: center;
 }
 
 footer {
@@ -50,6 +62,9 @@ footer .footer-right {
 .legal__links {
   display: flex;
   align-items: center;
-}/*# sourceMappingURL=styles.css.map */ase;
+}
+
+.footer a {
+  text-transform: uppercase;
   color: white;
 }/*# sourceMappingURL=styles.css.map */
