--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -1,28 +1,54 @@
 @use 'variables';
 
 /* le disclaimer est en display grid sur une colonne et une rangée*/
-.disclaimer{
-    display: grid;
+@media(min-width:375px){
+    .disclaimer{
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        width: 100vw;
+        height: 10vh;
+        background: variables.$pink;
+        color: variables.$ldlRed;
+        font-size: 1rem;
+      
+        p{
+            /*
+            align-self: center;
+            */
+            justify-self: center;
+            margin-left: 2vw;
+        }
+        i{
+            margin-top: 2vh;
+            margin-bottom: 8vw;
+            margin-right: 2vw;;
+            align-self: center;
+            justify-self: center;
+        }
+    }
+    
 
-    
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    
-    width: 100vw;
-    height: 10vh;
-    background: variables.$pink;
-    color: variables.$ldlRed;
-    font-size: 1rem;
-  
+}
+
+
+@media (min-width: 768px){
     p{
-        align-self: center;
-        justify-self: center;
-        margin-left: 2vw;
+        margin-top:4vh;
+        margin-left: 4vw;
     }
     i{
-        margin-bottom: 8vw;
-        margin-right: 2vw;;
-        align-self: center;
-        justify-self: center;
+        margin-left: 1vw;
     }
+}
+
+@media (min-width: 1400px){
+ .disclaimer{
+    grid-template-columns: auto 10vw;
+    grid-template-rows: auto auto;
+ }
+ i{
+    align-self: end;
+ }
+    
 }
