--- a/styles.css
+++ b/styles.css
@@ -11,34 +11,56 @@ body {
 }
 
 button {
-  background-color: white;
-  border: solid #B20838 10px;
+  background-color: #B20838;
+  border: none;
   padding: 5px;
 }
 
 /* le disclaimer est en display grid sur une colonne et une rangée*/
-.disclaimer {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  width: 100vw;
-  height: 10vh;
-  background: #F8DDE5;
-  color: #B20838;
-  font-size: 1rem;
+@media (min-width: 375px) {
+  .disclaimer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    width: 100vw;
+    height: 10vh;
+    background: #F8DDE5;
+    color: #B20838;
+    font-size: 1rem;
+  }
+  .disclaimer p {
+    /*
+    align-self: center;
+    */
+    justify-self: center;
+    margin-left: 2vw;
+  }
+  .disclaimer i {
+    margin-top: 2vh;
+    margin-bottom: 8vw;
+    margin-right: 2vw;
+    align-self: center;
+    justify-self: center;
+  }
 }
-.disclaimer p {
-  align-self: center;
-  justify-self: center;
-  margin-left: 2vw;
+@media (min-width: 768px) {
+  p {
+    margin-top: 4vh;
+    margin-left: 4vw;
+  }
+  i {
+    margin-left: 1vw;
+  }
 }
-.disclaimer i {
-  margin-bottom: 8vw;
-  margin-right: 2vw;
-  align-self: center;
-  justify-self: center;
+@media (min-width: 1400px) {
+  .disclaimer {
+    grid-template-columns: auto 10vw;
+    grid-template-rows: auto auto;
+  }
+  i {
+    align-self: end;
+  }
 }
-
 footer {
   background-color: #092327;
   width: 100%;
@@ -67,4 +89,18 @@ footer .footer-right {
 .footer a {
   text-transform: uppercase;
   color: white;
+}
+
+button {
+  background-color: #B20838;
+  border: none;
+  padding: 5px;
+  width: 25vw;
+}
+
+.menu {
+  width: 50vw;
+}
+.menu .fa-bars {
+  color: #B20838;
 }/*# sourceMappingURL=styles.css.map */
