--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -1,8 +1,8 @@
 footer {
   background-color: #092327;
-  width: 100%;
+  width: 100vw;
   text-align: left;
-  padding: 55px 50px;
+  padding: 55px 0;
 }
 footer .footer-left,
 footer .footer-center,
