--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,9 @@ button {
 }
 footer {
   background-color: #092327;
-  width: 100%;
+  width: 100vw;
   text-align: left;
-  padding: 55px 50px;
+  padding: 55px 0;
 }
 
 footer .footer-left,
@@ -91,16 +91,126 @@ footer .footer-right {
   color: white;
 }
 
-button {
-  background-color: #B20838;
-  border: none;
-  padding: 5px;
-  width: 25vw;
+@media (min-width: 375px) {
+  header {
+    width: 100vw;
+    height: 10vh;
+    display: grid;
+    grid-template-columns: auto 20%;
+    align-content: space-around;
+  }
+  header input[type=text] {
+    display: none;
+  }
+  header .header__searchbar {
+    display: none;
+  }
+  header .header__boutons {
+    display: none;
+  }
+  header img {
+    margin-top: 6px;
+  }
+  button {
+    background-color: #B20838;
+    border: none;
+    padding: 5px;
+    width: 10vw;
+  }
+  /*Image du logo du site*/
+  .logo {
+    align-self: center;
+    justify-self: center;
+    width: 150px;
+  }
+  /*menu navbar doit etre amélioré avec bootstrap*/
+  nav {
+    align-self: center;
+    justify-self: center;
+  }
+  nav .menu {
+    display: flex;
+    justify-content: start;
+  }
+  nav .menu .fa-bars {
+    color: #B20838;
+  }
 }
+@media (min-width: 768px) {
+  /*Image du logo du site*/
+  .logo {
+    width: 150px;
+  }
+  /*menu navbar doit etre amélioré avec bootstrap*/
+  nav .menu {
+    display: none;
+  }
+  header {
+    grid-template-columns: 25% 35% 40%;
+    margin-top: 10px;
+  }
+  header .header__searchbar {
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    color: #B20838;
+  }
+  header .header__searchbar .fa-magnifying-glass {
+    margin-right: 3px;
+    color: #B20838;
+  }
+  header input[type=text] {
+    display: flex;
+    width: 20vw;
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    font-size: 17px;
+  }
+  header .header__boutons {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+  }
+  header .header__boutons button {
+    align-self: center;
+    height: 6vh;
+    width: 19vw;
+  }
+  header .header__boutons button:nth-child(1) {
+    background-color: #FDFDFF;
+    border: solid #B20838;
+    color: #B20838;
+  }
+  header .header__boutons button:nth-child(2) {
+    color: #FDFDFF;
+  }
+}
+/*
+@media(min-width: 1400px){
+    header{
+        input[type="text"] {
+            display:grid;
+            width:10vw;
+            float: right;
+            padding: 6px;
+            border: solid black;
+            margin-top: 8px;
+            font-size: 17px;
+        }
+        .header__boutons{
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-rows: auto;
 
-.menu {
-  width: 50vw;
+            button{
+                width:19vw;
+            }
+
+
+        }
+
+    }
 }
-.menu .fa-bars {
-  color: #B20838;
-}/*# sourceMappingURL=styles.css.map */
+    *//*# sourceMappingURL=styles.css.map */
