--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -41,6 +41,7 @@
     nav{
         align-self: center;
         justify-self: center;
+        background-color: variables.$white;
         .menu{
             display: flex;
             justify-content: start;
