changement background logo navbar

--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -46,6 +46,7 @@
             display: flex;
             justify-content: start;
             .fa-bars{
+                background-color: variables.$tan;
                 color:variables.$ldlRed;
             }
         }
