--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -18,8 +18,21 @@ button{
     border: none;
     padding: 5px;
     cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
 }
+
+
+button:active:after{
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+
+}
+
 button:hover{
     background-color:#7e082a;
-    transition: 0.5s ease-in-out;
+    
 }
