--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -42,7 +42,8 @@ footer .footer-right {
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
   justify-content: stretch;
-//style pour les icones de médias sociaux
+
+  //style pour les icones de médias sociaux
   &__social-icons a {
     background-color: variables.$white;
     color: #818a91;
@@ -75,25 +76,34 @@ footer .footer-right {
     background-color: #00aced;
     color: variables.$white;
   }
-// Styles pour les liens dans le milieu
-  &__links li{
+
+  &__social-icons a.instagram:hover {
+    background: linear-gradient(to right, #f9ce34, #ee2a7b, #6228d7);
+    color: variables.$white;
+  }
+
+  // Styles pour les liens dans le milieu
+  &__links li {
     list-style: none;
     text-transform: uppercase;
     cursor: pointer;
     line-height: 3em;
     text-align: center;
   }
-  &__link a:hover{
+
+  &__link a:hover {
     text-decoration: underline;
     color: variables.$ldlRed;
   }
-  &__legal{
+
+  &__legal {
     line-height: 0;
     text-align: center;
     color: gray;
   }
+
   //Styles pour les infos: adresses, numéro de téléphone, etc.
-  &__info{
+  &__info {
     text-align: right;
     line-height: 0%;
   }
