--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@ footer .footer-right {
   justify-content: stretch;
 }
 .footer-wrapper__logo {
-  text-align: center;
+  margin-left: 20%;
   width: 25cqh;
   max-width: 100%;
   cursor: pointer;
@@ -272,23 +272,26 @@ footer .footer-right {
   margin-top: 10px;
 }
 .footer-wrapper__social-icons a {
-  background-color: #FDFDFF;
+  background: #FDFDFF;
   color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
+  border-radius: 50%;
+  width: 50px;
+  font-size: 50px;
   transition: all 0.2s linear;
   list-style: none;
 }
 .footer-wrapper__social-icons li {
   display: inline-block;
-  margin-bottom: 4px;
-  margin-right: 10px;
+  margin: 0 6px;
+}
+.footer-wrapper__social-icons .fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
 }
 .footer-wrapper__social-icons a.facebook:hover {
   background-color: #3b5998;
