--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -25,6 +25,7 @@
             margin-right: 2vw;;
             align-self: center;
             justify-self: center;
+            cursor: pointer;
         }
     }
     
