--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ button {
   color: #FDFDFF;
   border: none;
   border: solid 2px #FDFDFF;
-  border-radius: 4px;
   padding: 15px;
   cursor: pointer; /* Safari */
   transition-duration: 0.4s;
@@ -63,6 +62,7 @@ a {
     margin-right: 2vw;
     align-self: center;
     justify-self: center;
+    cursor: pointer;
   }
 }
 @media (min-width: 768px) {
@@ -93,35 +93,65 @@ a {
   align-items: center;
   padding: 15px;
   background-color: #FDFDFF;
-  color: white;
 }
 .navbar .navbar-top .logo {
+  justify-self: center;
+  height: 3rem;
   font-size: 1.5rem;
   font-weight: bold;
 }
-.navbar .navbar-top__searchbar {
-  padding: 8px;
-  border-radius: 5px;
+.navbar .navbar-top__searchbar input {
+  padding: 0.5rem;
+  padding-inline: 0.2rem;
+  border: none;
+}
+.navbar .navbar-top__searchbar input::-moz-placeholder {
+  color: #B20838;
+}
+.navbar .navbar-top__searchbar input::placeholder {
+  color: #B20838;
+}
+.navbar .navbar-top__searchbar input:active {
   border: 1px solid #ccc;
 }
+.navbar .navbar-top__searchbar i {
+  font-size: 1rem;
+  margin-right: 0.5rem;
+  color: #B20838;
+}
 .navbar .navbar-top .cta-button {
-  background-color: #ff6600;
+  background-color: #B20838;
   color: white;
   padding: 10px 20px;
+  margin-right: 1rem;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
+}
+.navbar .navbar-top .secondary {
+  color: #B20838;
+  background-color: #FDFDFF;
+  border: 2px solid #B20838;
 }
 .navbar .navbar-bottom {
   background-color: #092327;
 }
 .navbar .navbar-bottom ul {
+  height: 2.2rem;
   display: flex;
   list-style: none;
   justify-content: center;
+  align-items: center;
+  margin: 0 0;
 }
 .navbar .navbar-bottom ul li {
+  display: flex;
+  align-items: center;
   margin: 0 0;
+  height: 100%;
+  padding: 0 10px;
+}
+.navbar .navbar-bottom ul li:hover {
+  background-color: #B20838;
 }
 .navbar .navbar-bottom ul li a {
   color: white;
@@ -131,22 +161,21 @@ a {
 .navbar .navbar-bottom ul li a:hover {
   background-color: #B20838;
 }
-.navbar .mobile-menu {
-  display: none;
+.navbar .hamburger {
+  display: flex;
   position: absolute;
-  right: 20px;
-  top: 15px;
-}
-.navbar .mobile-menu .hamburger {
+  right: 2rem;
+  top: 1.6rem;
+  z-index: 2;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.navbar .mobile-menu .hamburger span {
-  width: 30px;
-  height: 3px;
-  background-color: white;
+.navbar .hamburger span {
+  width: 2rem;
+  height: 0.3rem;
+  background-color: #092327;
   transition: all 0.3s ease;
 }
 .navbar .mobile-menu-overlay {
@@ -155,66 +184,87 @@ a {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #FDFDFF;
   display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
-  z-index: 999;
+  z-index: 1;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content {
   text-align: center;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content .logo {
-  font-size: 2rem;
-  margin-bottom: 20px;
+  height: 3rem;
+  margin-bottom: 1.5rem;
 }
-.navbar .mobile-menu-overlay .mobile-menu-content .search {
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  width: 80%;
+.navbar .mobile-menu-overlay .mobile-menu-content .searchbar input {
+  padding: 0.5rem;
+  padding-inline: 0.2rem;
+  border: none;
+  border-bottom: 1px solid #B20838;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .searchbar input::-moz-placeholder {
+  color: #B20838;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .searchbar input::placeholder {
+  color: #B20838;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .searchbar input:active {
+  border: 1px solid #ccc;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .searchbar i {
+  font-size: 1rem;
+  margin-right: 0.5rem;
+  color: #B20838;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content ul {
   list-style: none;
+  padding: 0;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content ul li {
   margin: 15px 0;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content ul li a {
-  color: white;
-  font-size: 1.5rem;
+  color: #B20838;
+  font-size: 1rem;
   text-decoration: none;
 }
 .navbar .mobile-menu-overlay .mobile-menu-content .cta-button {
-  background-color: #ff6600;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  display: block;
+  margin: 10px auto;
+  padding: 10px 15px;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .secondary {
+  color: #B20838;
+  background-color: #FDFDFF;
+  border: 2px solid #B20838;
 }
 
 @media (max-width: 768px) {
-  .navbar .navbar-top,
-  .navbar .navbar-bottom {
+  .navbar .navbar-bottom,
+  .navbar .navbar-top .navbar-top__searchbar,
+  .navbar .navbar-top .navbar-top__buttons {
     display: none;
   }
-  .navbar .mobile-menu {
-    display: block;
+  .navbar .navbar-top {
+    justify-content: center;
+  }
+  .navbar .hamburger {
+    display: flex;
   }
   .mobile-menu-overlay.show {
     display: flex;
   }
-  .mobile-menu.open .hamburger span:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
+  .hamburger.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 8.5px);
   }
-  .mobile-menu.open .hamburger span:nth-child(2) {
+  .hamburger.open span:nth-child(2) {
     opacity: 0;
   }
-  .mobile-menu.open .hamburger span:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
+  .hamburger.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -8.5px);
   }
 }
 footer {
