Fixed hamburger menu

--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -87,7 +87,7 @@
   
   
     .hamburger {
-      display: flex;
+      display: none;
       position: absolute;
       right: 2rem;
       top: 1.6rem;
