--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ a {
   background-color: #B20838;
 }
 .navbar .hamburger {
-  display: flex;
+  display: none;
   position: absolute;
   right: 2rem;
   top: 1.6rem;
