--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -146,3 +146,13 @@ footer .footer-right {
     text-align: center;
   }
 }
+
+// @media screen(min-width:375px){
+//   footer{
+//     width: 100vw;
+//   height: 10vh;
+//   display: grid;
+//   grid-template-columns: auto 20%;
+//   align-content: space-around;
+//   }
+// }
