--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ a {
   top: 1.6rem;
   z-index: 2;
   cursor: pointer;
+  display: flex;
   flex-direction: column;
   gap: 5px;
 }
@@ -274,7 +275,7 @@ footer {
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
+  justify-items: stretch;
   align-items: center;
 }
 
@@ -303,7 +304,6 @@ footer .footer-right {
 
 .footer-wrapper {
   display: grid;
-  grid-gap: 10px;
   width: 100vw;
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
